[project]
name = "scanner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.3",
    "img2pdf>=0.6.3",
    "logging>=0.4.9.6",
    "opencv-python>=4.13.0.92",
    "opencv-python-headless>=4.13.0.92",
    "pdf2image>=1.17.0",
    "pillow>=12.2.0",
    "pytesseract>=0.3.13",
]
