[project]
name = "scanner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.3",
    "img2pdf>=0.6.3",
    "logging>=0.4.9.6",
    "opencv-python>=4.13.0.92",
    "opencv-python-headless>=4.13.0.92",
    "pillow>=12.2.0",
    "pypdfium2>=4.30.0",
]
